04_web-faas-builder/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-faas
  labels:
    app.kubernetes.io/name: blue-faas
    app.kubernetes.io/part-of: sfbank-blue
