04_web-faas-builder/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-faas
  namespace: blue-faas
  labels:
    app.kubernetes.io/name: blue-faas
  annotations:
    # ALB Ingress Controller annotations
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:217350599014:certificate/ead557d2-eee7-4b32-8730-43ee48076edc
spec:
  rules:
    - host: builder.eunha.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-faas
                port:
                  name: http
